logs/dag_id=ETL/run_id=scheduled__2023-05-25T00:00:00+00:00/task_id=add_data/attempt=12.log
[2023-05-26T15:32:30.420+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [queued]>
[2023-05-26T15:32:30.436+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [queued]>
[2023-05-26T15:32:30.437+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-26T15:32:30.437+0000] {taskinstance.py:1283} INFO - Starting attempt 12 of 17
[2023-05-26T15:32:30.437+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-26T15:32:30.465+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): add_data> on 2023-05-25 00:00:00+00:00
[2023-05-26T15:32:30.472+0000] {standard_task_runner.py:55} INFO - Started process 637 to run task
[2023-05-26T15:32:30.475+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'add_data', 'scheduled__2023-05-25T00:00:00+00:00', '--job-id', '276', '--raw', '--subdir', 'DAGS_FOLDER/refresh_token_DAG.py', '--cfg-path', '/tmp/tmpe8e43ovd']
[2023-05-26T15:32:30.477+0000] {standard_task_runner.py:83} INFO - Job 276: Subtask add_data
[2023-05-26T15:32:30.572+0000] {task_command.py:388} INFO - Running <TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [running]> on host 05172cfd5782
[2023-05-26T15:32:31.167+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=ETL
AIRFLOW_CTX_TASK_ID=add_data
AIRFLOW_CTX_EXECUTION_DATE=2023-05-25T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=12
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-05-25T00:00:00+00:00
[2023-05-26T15:32:31.168+0000] {sql.py:254} INFO - Executing: 
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:21:02.777Z',
            'Kataklysm',
            'Guillotine',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:18:01.673Z',
            'YAKTAK',
            'Чекає вдома (feat. DOVI)',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:09:06.935Z',
            'Rev Theory',
            'Hell Yeah',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:04:58.448Z',
            'Metalocalypse: Dethklok',
            'Awaken',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:01:20.326Z',
            'Suicide Silence',
            'Disengage',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:48:00.134Z',
            'Judas Priest',
            'Breaking the Law',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:40:59.659Z',
            'Volbeat',
            'The Devil's Bleeding Crown',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:37:00.570Z',
            'Trapt',
            'Headstrong',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:32:14.534Z',
            'System Of A Down',
            'B.Y.O.B.',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:27:58.465Z',
            'Motionless In White',
            'Voices',
            '2023-05-25'
            )
        
[2023-05-26T15:32:31.181+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-26T15:32:31.577+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-26T15:32:31.582+0000] {sql.py:375} INFO - Running statement: 
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:21:02.777Z',
            'Kataklysm',
            'Guillotine',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:18:01.673Z',
            'YAKTAK',
            'Чекає вдома (feat. DOVI)',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:09:06.935Z',
            'Rev Theory',
            'Hell Yeah',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:04:58.448Z',
            'Metalocalypse: Dethklok',
            'Awaken',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T09:01:20.326Z',
            'Suicide Silence',
            'Disengage',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:48:00.134Z',
            'Judas Priest',
            'Breaking the Law',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:40:59.659Z',
            'Volbeat',
            'The Devil's Bleeding Crown',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:37:00.570Z',
            'Trapt',
            'Headstrong',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:32:14.534Z',
            'System Of A Down',
            'B.Y.O.B.',
            '2023-05-25'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-25T08:27:58.465Z',
            'Motionless In White',
            'Voices',
            '2023-05-25'
            )
        , parameters: None
[2023-05-26T15:32:31.583+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "s"
LINE 41:             'The Devil's Bleeding Crown',
                                ^

[2023-05-26T15:32:31.594+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL, task_id=add_data, execution_date=20230525T000000, start_date=20230526T153230, end_date=20230526T153231
[2023-05-26T15:32:31.614+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 276 for task add_data (syntax error at or near "s"
LINE 41:             'The Devil's Bleeding Crown',
                                ^
; 637)
[2023-05-26T15:32:31.655+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-26T15:32:31.687+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
